e2e/testdata/policy/l4.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: l4-egress
spec:
  endpointSelector:
    matchLabels:
      k8s:test: self
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:test: l4-ingress-explicit-allow
      toPorts:
        - ports:
            - port: "53"
    - toEndpoints:
        - matchLabels:
            k8s:test: l4-ingress-explicit-allow-tcp
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:test: l4-ingress-explicit-deny
      toPorts:
        - ports:
            - port: "53"
    - toEndpoints:
        - matchLabels:
            k8s:test: l4-ingress-explicit-deny-udp
      toPorts:
        - ports:
            - port: "161" # SNMP (UDP)
              protocol: UDP
